--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_common.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_common.scss
@@ -8,7 +8,11 @@
 // set the defaults for all responsive levels here
 // no (xl) media query necessary (desktop first)
 
-
+html {
+  position: relative;
+  min-height: 100%;
+  min-width: 320px;
+}
 
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
