--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
@@ -6,6 +6,11 @@
 // set the defaults for all responsive levels here
 // no (xl) media query necessary (desktop first)
 
+body {
+  padding-top: 165px;
+}
+
+
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
   // add/overwrite styles for responsive level lg and lower
