--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_variables.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_variables.scss
@@ -14,8 +14,42 @@
 //  project settings
 // --------------------------------------------------
 
-
+$dfi-white: #fff;
+$dfi-gray: #666666;
+$dfi-gray-dark: #343a40;
+$dfi-primary:#ff9e30;
+$dfi-primary-hover: #f48f17;
+$dfi-secondary: #dce3e7;
+$dfi-secondary-hover: #d3dbde;
+$dfi-success: #98e59d;
+$dfi-success-hover: #8cd390;
+$dfi-info: #17a2b8;
+$dfi-warning: #ffc107;
+$dfi-danger: #dc3545;
+$dfi-light: #F4F4F4;
+$dfi-dark: #002a55;
 
 // --------------------------------------------------
 //  overwrite bootstrap
 // --------------------------------------------------
+
+$primary:     $dfi-dark;
+$secondary:   $dfi-primary;
+$body-color:  $dfi-dark;
+
+$web-font-path:             "https://webfonts.gbv.de/css2?family=Open+Sans:wght@400;700&display=swap";
+$font-family-sans-serif:    "Open Sans", "Arial", "Verdana", "Tahoma", sans-serif;
+$font-size-base:            1rem;
+
+$border-radius:             0;
+$border-radius-lg:          0;
+$border-radius-sm:          0;
+
+$navbar-light-color: $dfi-dark;
+$navbar-light-hover-color: $dfi-primary;
+
+$dropdown-link-color: $dfi-dark;
+$dropdown-link-hover-color: white;
+$dropdown-link-hover-bg: $dfi-primary;
+
+$navbar-nav-link-padding-x: 0;
