--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
@@ -7,7 +7,22 @@
 // no (xl) media query necessary (desktop first)
 
 body {
-  padding-top: 165px;
+  padding-top: 11rem;
+  background-color: $dfi-secondary;
+}
+
+#page {
+  padding-bottom: 3rem;
+  background-color: transparent;
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+    & > div {
+      background-color: white;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
 }
 
 
