--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_section-home.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_section-home.scss
@@ -7,6 +7,7 @@
 // no (xl) media query necessary (desktop first)
 
 body.mir-start_page {
+  background-color: white;
   .splash {
     padding-left: 0;
     padding-right: 0;
@@ -21,7 +22,7 @@ body.mir-start_page {
       position: absolute;
       bottom: 0;
       right: 0;
-      width: 80%;
+      width: 66%;
       min-height: 60%;
       background-color: rgba(255,255,255,0.8);
       display: flex;
