--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_variables.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_variables.scss
@@ -42,6 +42,9 @@ $font-family-sans-serif:    "Source Sans 3", "Arial", "Verdana", "Tahoma", sans-
 $font-family-serif:         "Source Serif 4", "Times New Roman", "Garamond", serif;
 $font-size-base:            1rem;
 
+$line-height-lg:            1.375;
+$line-height-sm:            1.375;
+
 $border-radius:             0;
 $border-radius-lg:          0;
 $border-radius-sm:          0;
@@ -54,3 +57,4 @@ $dropdown-link-hover-color: white;
 $dropdown-link-hover-bg: $dfi-primary;
 
 $navbar-nav-link-padding-x: 0;
+$nav-link-padding-x: 0;
