--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_footer.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_footer.scss
@@ -14,6 +14,7 @@
   }
   a {
     font-style: italic;
+    font-weight: 700;
   }
   .pin {
     padding-left: 30px;
@@ -29,7 +30,11 @@
   }
 }
 
-
+.footer-menu {
+  li {
+    text-align: right;
+  }
+}
 
 .footer-copyright {
   color: white;
