--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_typo.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_typo.scss
@@ -5,17 +5,39 @@
 // set the defaults for all responsive levels here
 // no (xl) media query necessary (desktop first)
 
-h1 {
-  font-size: 3.95em;
-  margin-bottom: 20px;
-  font-family: $font-family-serif;
-  span {
-    display: inline;
-    box-decoration-break: clone;
-    -webkit-box-decoration-break: clone;
-    background: linear-gradient(0deg,rgba(255, 157, 46,0) 0%,rgba(255, 157, 46,0) 5%,rgba(255, 157, 46,1) 5.1%,rgba(255, 157, 46,1) 45%,rgba(255, 157, 46,0) 45.1%,rgba(255, 157, 46,0) 100%);
+  .cms-page {
+    h1 {
+      font-size: 3.95em;
+      margin-bottom: 20px;
+      font-family: $font-family-serif;
+      span {
+        display: inline;
+        box-decoration-break: clone;
+        -webkit-box-decoration-break: clone;
+        background: linear-gradient(0deg,rgba(255, 157, 46,0) 0%,rgba(255, 157, 46,0) 5%,rgba(255, 157, 46,1) 5.1%,rgba(255, 157, 46,1) 45%,rgba(255, 157, 46,0) 45.1%,rgba(255, 157, 46,0) 100%);
+      }
+    }
+
+    h2 {
+      font-size: 2em;
+      margin-bottom: 80px;
+      font-family: $font-family-serif;
+      font-weight: 700;
+    }
+
+    h3 {
+      font-size: 1.1em;
+      margin-bottom: 50px;
+      padding-bottom: 8px;
+      border-bottom: 5px solid #002a55;
+      line-height: 1.1em;
+      font-weight: 700;
+    }
+
+    p {
+      line-height: inherit;
+    }
   }
-}
 
 
 // Large devices (desktops) and below: <= 1200px
