--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_footer.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_footer.scss
@@ -15,6 +15,10 @@
   a {
     font-style: italic;
     font-weight: 700;
+    &:hover {
+      text-decoration: none;
+      color: $dfi-link-hover;
+    }
   }
   .pin {
     padding-left: 30px;
