--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_typo.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_typo.scss
@@ -21,7 +21,7 @@
     h2 {
       font-size: 2em;
       margin-bottom: 80px;
-      font-family: $font-family-serif;
+      font-family: $font-family-sans-serif;
       font-weight: 700;
     }
 
