DFI-47 fixes viewer full size view

--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
@@ -6,7 +6,7 @@
 // set the defaults for all responsive levels here
 // no (xl) media query necessary (desktop first)
 
-body {
+body:not(.mycoreViewer) {
   padding-top: 11rem;
 }
 
