DFI-73 set max height for fiv filter list on response page

--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_lists.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_lists.scss
@@ -7,6 +7,11 @@
 // no (xl) media query necessary (desktop first)
 
 
+.card.fivdfi ul.filter {
+  max-height: 70vh;
+  overflow-y: scroll;
+}
+
 
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
